--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://oriyosef.github.io",
+  "homepage": "https://nivohayon.github.io/OriYosefWebsite",
   "name": "ori-yosef-website",
   "version": "0.1.0",
   "private": true,
