--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Niv Portfolio",
-  "name": "Niv Portfolio",
+  "short_name": "Ori Yosef",
+  "name": "Ori Yosef",
   "icons": [
     {
       "src": "favicon.ico",
